--- a/1-intro/index.html
+++ b/1-intro/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <title>Sherlock</title>
 </head>
 <body>
-    
+    <img src="sherlock.jpg" width="300" height="400">
+   <center> <h1>404</h1> </center>
+  
+   <div> Looks like this page is missing.</div>
+   <div> Don't worry though, our best</div>
+   <div> man is in the case.</div>
+   <div><small> Meanwhile, why don't try again by going </small> </div>
+   <button type="button">BACK HOME </button>
+
 </body>
 </html>
