--- a/2-sherlock/sherlock.html
+++ b/2-sherlock/sherlock.html
@@ -8,14 +8,13 @@
     <title>Sherlock</title>
 </head>
 <body>
-    <img src="sherlock.jpg" width="300" height="400" ALIGN="left"/>
-    <center><h1>404</h1> 
+    <img style=margin:top 100px; src="sherlock.jpg" width="300" height="400" ALIGN="left"/>
+    <h1 style="font: size 200px;">404</h1> 
    
    <div> Looks like this page is missing.</div>
-   <div> Don't worry though, our best</div>
-   <div> man is in the case.</div>
+   <div> Don't worry though, our best man is in the case.</div>
    <div><small> Meanwhile, why don't try again by going </small> </div>
-   <button type="button">BACK HOME </button> </center>
+   <a href="#">BACK HOME </a> </center>
 
 </body>
 </html>
