--- a/3-mergaite/index.html
+++ b/3-mergaite/index.html
@@ -5,14 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mergaite</title>
+
 </head>
+<style >.textstyle {
+  background-color: none; 
+  font-weight: bold; 
+  border-radius: 10px;
+  width: auto; 
+  height: auto; 
+  padding: 5px 20px 5px 20px; 
+  font-size: 10px; 
+  border: 2px  solid grey;
+} </style>
 <body style="color: grey;">
+  
   <img src="DV.jpg"alt=ženklas width="50" height="60">
 <div align="right">
-<a href="#">Home &nbsp; </a> <a href="#">Tracks &nbsp;</a> <a href="#"> Library &nbsp; </a> <a href="#"> Community &nbsp;</a> <button onclick="#">Sing in</button> </div>
-  <img border="0" src="mergaite.jpg" alt="liūdna mergaite" align="right">
- <div align="center" color=><b><font size=10>404</font></b>
-  <p>The link is broken or the page has been moved.</p></div>
+<a href="#" style="text-decoration: none;">Home &nbsp; </a> 
+<a href="#" style="text-decoration: none;">Tracks &nbsp;</a> 
+<a href="#" style="text-decoration: none;"> Library &nbsp; </a> 
+<a href="#" style="text-decoration: none;"> Community &nbsp;</a> 
+<a href="#" class="textstyle" style="text-transform:uppercase"> Sing in</a> </div>
+  <img border="0" src="mergaite.png" alt="liūdna mergaite" align="right">
+ <div align="center"><b><font size=100>404</font></b>
+  <p style="font-family: Verdana, Geneva, Tahoma, sans-serif;">The link is broken or the page has been moved.</p></div>
 </body>
 </html>
 
