--- a/3-mergaite/index.html
+++ b/3-mergaite/index.html
@@ -5,30 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mergaite</title>
-
+    <link rel="stylesheet" href="main.css">
 </head>
-<style >.textstyle {
-  background-color: none; 
-  font-weight: bold; 
-  border-radius: 10px;
-  width: auto; 
-  height: auto; 
-  padding: 5px 20px 5px 20px; 
-  font-size: 10px; 
-  border: 2px  solid grey;
-} </style>
+
 <body style="color: grey;">
   
-  <img src="DV.jpg"alt=ženklas width="50" height="60">
+  <img src="./DV.png"alt=ženklas width="50" height="60">
 <div align="right">
-<a href="#" style="text-decoration: none;">Home &nbsp; </a> 
-<a href="#" style="text-decoration: none;">Tracks &nbsp;</a> 
-<a href="#" style="text-decoration: none;"> Library &nbsp; </a> 
-<a href="#" style="text-decoration: none;"> Community &nbsp;</a> 
-<a href="#" class="textstyle" style="text-transform:uppercase"> Sing in</a> </div>
-  <img border="0" src="mergaite.png" alt="liūdna mergaite" align="right">
- <div align="center"><b><font size=100>404</font></b>
-  <p style="font-family: Verdana, Geneva, Tahoma, sans-serif;">The link is broken or the page has been moved.</p></div>
+  <nav>
+    <a href="#" style="text-decoration: none;">Home &nbsp; </a> 
+    <a href="#" style="text-decoration: none;">Tracks &nbsp;</a> 
+    <a href="#" style="text-decoration: none;"> Library &nbsp; </a> 
+    <a href="#" style="text-decoration: none;"> Community &nbsp;</a> 
+    <a href="#" class="textstyle" style="text-transform:uppercase"> Sing in</a> </div></nav>
+    <img border="0" src="./mergaite.png" alt="liūdna mergaite" align="right">
+  <div align="center"><b><font size=100>404</font></b>
+    <p style="font-family: Verdana, Geneva, Tahoma, sans-serif;">The link is broken or the page has been moved.</p></div>
 </body>
 </html>
 
