--- a/3-mergaite/index.html
+++ b/3-mergaite/index.html
@@ -11,16 +11,19 @@
 <body style="color: grey;">
   
   <img src="./DV.png"alt=ženklas width="50" height="60">
-<div align="right">
+<div>
   <nav>
-    <a href="#" style="text-decoration: none;">Home &nbsp; </a> 
-    <a href="#" style="text-decoration: none;">Tracks &nbsp;</a> 
-    <a href="#" style="text-decoration: none;"> Library &nbsp; </a> 
-    <a href="#" style="text-decoration: none;"> Community &nbsp;</a> 
-    <a href="#" class="textstyle" style="text-transform:uppercase"> Sing in</a> </div></nav>
-    <img border="0" src="./mergaite.png" alt="liūdna mergaite" align="right">
-  <div align="center"><b><font size=100>404</font></b>
-    <p style="font-family: Verdana, Geneva, Tahoma, sans-serif;">The link is broken or the page has been moved.</p></div>
+      <a href="#" style="text-decoration: none;">Home &nbsp; </a> 
+      <a href="#" style="text-decoration: none;">Tracks &nbsp;</a> 
+       <a href="#" style="text-decoration: none;"> Library &nbsp; </a> 
+      <a href="#" style="text-decoration: none;"> Community &nbsp;</a> 
+      <a href="#" class="textstyle" style="text-transform:uppercase"> Sing in</a> </div></nav>
+      <main></main>
+      <img border="0" src="./mergaite.png" alt="liūdna mergaite" align="right">
+         <div font-weight:"bold"><font size=100>404 
+  </nav>
+    <p>The link is broken or the page has been moved.</p></div>
+  </main>
 </body>
 </html>
 
