--- a/4-Singup/index.html
+++ b/4-Singup/index.html
@@ -5,8 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-up</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    content
+    <main class="container">
+        <div class="left-column">
+            <h1>Sign up</h1>
+<div class="left-column">
+                <a href="#">Privacy policy</a>
+               <span>&amp;</span>
+                <a href="#"> terms of service"</a>
+            </div>
+        </div>
+        <div>
+            <div>&#x2573</div>
+            <form>
+                <div class="right-column">
+                  
+            <br>
+                  <label for="username"><font-weight:bold>Username</font-weight:bold></label>
+                  <input type="text" placeholder="KS Arts" name="Username" required> 
+            </br>
+             <br>
+                  <label for="email"><b>Email</b></label>
+                  <input type="text" placeholder="shcherbina.art@gmail.com" name="email" required>
+            </br>
+                  <label for="psw"><b>Password</b></label>
+                  <input type="password" placeholder="******" name="psw" required>
+            <br>
+                  <label for="psw-repeat"><b>Repeat Password</b></label>
+                  <input type="password" placeholder="******" name="psw-repeat" required>
+            </br>
+                    <a href="#" class="button">Get Started</a>
+                    <a href="#" class="button">Sign In</a>
+              </form>
+        </div>
+    </main>
 </body>
 </html>
