--- a/4-Singup/index.html
+++ b/4-Singup/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-up</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/reset.css">
 </head>
 <body>
     <main class="container">
@@ -30,14 +31,18 @@
                   <label for="email"><b>Email</b></label>
                   <input type="text" placeholder="shcherbina.art@gmail.com" name="email" required>
             </br>
+
                   <label for="psw"><b>Password</b></label>
                   <input type="password" placeholder="******" name="psw" required>
             <br>
                   <label for="psw-repeat"><b>Repeat Password</b></label>
                   <input type="password" placeholder="******" name="psw-repeat" required>
             </br>
-                    <a href="#" class="button">Get Started</a>
+            
+                    <button type="button">Get Started</button>
+                    or
                     <a href="#" class="button">Sign In</a>
+                   
               </form>
         </div>
     </main>
