--- a/4-Singup/index.html
+++ b/4-Singup/index.html
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="./css/form.css">
 </head>
 <body>
+    <div class="background"></div>
     <main class="container">
         <div class="left-column">
             <h1>Sign up</h1>
-            <div class="left-column">
+            <div class="bottom-texts">
                 <a href="#">Privacy policy</a>
                <span>&amp;</span>
                 <a href="#"> terms of service</a>
