Sing Up pabaiga

--- a/4-Singup/sign-in/index.html
+++ b/4-Singup/sign-in/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign-up</title>
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/form.css">
-    <link rel="shortcut icon" href="s.png" type="image/png">
-    <link rel="stylesheet" href="./css/button.css">
+    <title>Sign-in</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/form.css">
+    <link rel="shortcut icon" href=".s.png" type="image/png">
+    <link rel="stylesheet" href="../css/button.css">
 </head>
 <body>
     <div class="background"></div>
     <main class="container">
         <div class="left-column">
-            <h1>Sign up</h1>
+            <h1>Sing In</h1>
             <div class="bottom-texts">
                 <a href="#">Privacy policy</a>
                <span>&amp;</span>
@@ -31,22 +31,15 @@
                   <label for="username">Username</label>
                   <input id="username" type="text" placeholder="KS Arts" name="Username" required> 
                 </div>
-                  <div class="form-row">
-                  <label for="email">Email</label>
-                  <input id="email" type="text" placeholder="shcherbina.art@gmail.com" name="email" required>
-                  </div>
+                  
                   <div class="form-row">
                   <label for="psw">Password</label>
                   <input id="psw" type="password" placeholder="******" name="psw" required>
                   </div>
                   <div class="form-row">
-                  <label for="psw-repeat">Repeat Password</label>
-                  <input id="psw-repeat" type="password" placeholder="******" name="psw-repeat" required>
-                  </div>
-                  <div class="form-row">
-                   <button type="submit">Get Started</button>
+                   <button type="submit">Login</button>
                    <span>or</span>
-                   <a href="./sign-in/index.html" class="btn" style="color: blue;">Sign In</a>
+                   <a href="../forgot-password/index.html" class="btn" style="color: blue;">Forgot password?</a>
                   </div> 
               </form>
         </div>
