--- a/Fcuksense/index.html
+++ b/Fcuksense/index.html
@@ -8,17 +8,19 @@
     <title>Fcuksense</title>
 </head>
 <body>
-    <p class="pavadinimas">Fcuksense</p>
+   
     <main class="container">
+       
     <div class="left-column">
         <form>
+            <p class="pavadinimas">Fcuksense</p>
             <h1>Artificial Intelligence Driving Results For The Travel Industry</h1>
             <p>Welcome Back, Please login to your account</p>
             <div class="form-row">
                 <input id="email" type="email" placeholder="Email Address" required>
             </div>
             <div class="form-row">
-                <input id="pass" type="password" placeholder="Password" required>
+                <input id="pass" type="password" placeholder="Password" "******" required>
             </div>
             <input type="checkbox" value="lsRememberMe" id="rememberMe"> 
             <label for="rememberMe">Remember me</label>
