--- a/Fcuksense/index.html
+++ b/Fcuksense/index.html
@@ -20,14 +20,14 @@
                 <input id="email" type="email" placeholder="Email Address" required>
             </div>
             <div class="form-row">
-                <input id="pass" type="password" placeholder="Password" "******" required>
+                <input id="pass" type="password" placeholder="Password" required>
             </div>
             <input type="checkbox" value="lsRememberMe" id="rememberMe"> 
             <label for="rememberMe">Remember me</label>
             <a href="#">Forget password?</a>
             <div class="form-row">
-                <button type="submit">Login</button>
-                <button type="submit">Sign Up</button>      
+                <button type="submit" class="button">Login</button>
+                <a href="#" class="a">Sign Up</a>      
             </div>
         </form>
     </div>
