--- a/Fcuksense/index.html
+++ b/Fcuksense/index.html
@@ -24,11 +24,12 @@
             </div>
             <input type="checkbox" value="lsRememberMe" id="rememberMe"> 
             <label for="rememberMe">Remember me</label>
-            <a href="#">Forget password?</a>
+            <a href="#" class="a1">Forget password?</a>
             <div class="form-row">
                 <button type="submit" class="button">Login</button>
                 <a href="#" class="a">Sign Up</a>      
             </div>
+            <p>Or login with</p>
         </form>
     </div>
         <div class="right-column">
