--- a/Fcuksense/index.html
+++ b/Fcuksense/index.html
@@ -29,11 +29,14 @@
                 <button type="submit" class="button">Login</button>
                 <a href="#" class="a">Sign Up</a>      
             </div>
-            <p>Or login with</p>
+            <i>Or login with  </i> 
+            <a href="#" class="btn">Facebook</a>
+            <a href="#" class="btn">Linkedin</a>
+            <a href="#" class="btn">Google</a>
         </form>
     </div>
         <div class="right-column">
-        <Img src="./fcuksense.jpg" alt="something"  width="500" height="600">
+        <Img src="./fcuksense.jpg" alt="something"  width="700" height="800">
         </div>
         </main>
 </body>
