--- a/Fcuksense/index.html
+++ b/Fcuksense/index.html
@@ -15,7 +15,7 @@
         <form>
             <p class="pavadinimas">Fcuksense</p>
             <h1>Artificial Intelligence Driving Results For The Travel Industry</h1>
-            <p>Welcome Back, Please login to your account</p>
+            <p class="please">Welcome Back, Please login to your account</p>
             <div class="form-row">
                 <input id="email" type="email" placeholder="Email Address" required>
             </div>
