--- a/Fcuksense/index.html
+++ b/Fcuksense/index.html
@@ -29,14 +29,14 @@
                 <button type="submit" class="button">Login</button>
                 <a href="#" class="a">Sign Up</a>      
             </div>
-            <i>Or login with  </i> 
+            <span>Or login with  </span> 
             <a href="#" class="btn">Facebook</a>
             <a href="#" class="btn">Linkedin</a>
             <a href="#" class="btn">Google</a>
         </form>
     </div>
         <div class="right-column">
-        <Img src="./fcuksense.jpg" alt="something"  width="700" height="800">
+        <Img src="./fcuksense.jpg" alt="something"  width="650" height="700">
         </div>
         </main>
 </body>
