--- a/Coming-soon/index.html
+++ b/Coming-soon/index.html
@@ -7,14 +7,14 @@
     <title>Coming Soon</title>
 </head>
 <body>
-  <header>  Coming soon </header>
+  <header>Coming soon</header>
 
-  <div class="row">
-    <div class="column" style="background-color:#aaa;">
+  <div class="container">
+    <div class="left-column" style="background-color:#aaa;">
       <h2>About startup</h2>
       <p>Some text..</p>
     </div>
-    <div class="column" style="background-color:#bbb;">
+    <div class="right-column" style="background-color:#bbb;">
       <h2>Have any question?</h2>
       <p>Some text..</p>
     </div>
