--- a/7-coming-soon/index.html
+++ b/7-coming-soon/index.html
@@ -48,15 +48,19 @@
                 <h2 class="section-title">About startup</h2>
                 <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt facere odit cumque <a href="#">Matrox</a>, necessitatibus hic officiis enim animi itaque aut delectus doloribus aperiam quo velit aliquid inventore atque? Quos, quas.</p>
                 <div class="progress-bar">
-                    PROGRESS BAR
-                </div>
-                <div class="progress-bar">
-                    PROGRESS BAR
-                </div>
-                <div class="progress-bar">
-                    PROGRESS BAR
-                </div>
+                    <div class="top">
+                       
+                        <div class="label">UX Design</div>
+                        <div class="value">90%</div>
+                        <div class="label">UX Design</div>
+                        <div class="value">86%</div>
+                        <div class="label">UX Design</div>
+                        <div class="value">50%</div>
+                        </div>
+                        <div class = bottom></div>
+                <div class="progress></div>
             </div>
+        </div>
             <div class="right-column">
                 <h2 class="section-title">Have any question?</h2>
                 <p class="section-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam tempora accusamus hic architecto ipsam repellat <a href="mailto:demo@mail.xyz">demo@mail.xyz</a> nihil quidem maiores veniam doloremque labore, laboriosam, dolorum eligendi harum. Quidem perferendis quia ad?</p>
