--- a/7-coming-soon/index.html
+++ b/7-coming-soon/index.html
@@ -47,20 +47,7 @@
             <div class="left-column">
                 <h2 class="section-title">About startup</h2>
                 <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt facere odit cumque <a href="#">Matrox</a>, necessitatibus hic officiis enim animi itaque aut delectus doloribus aperiam quo velit aliquid inventore atque? Quos, quas.</p>
-                <div class="progress-bar">
-                    <div class="top">
-                       
-                        <div class="label">UX Design</div>
-                        <div class="value">90%</div>
-                        <div class="label">UX Design</div>
-                        <div class="value">86%</div>
-                        <div class="label">UX Design</div>
-                        <div class="value">50%</div>
-                        </div>
-                        <div class = bottom></div>
-                <div class="progress></div>
             </div>
-        </div>
             <div class="right-column">
                 <h2 class="section-title">Have any question?</h2>
                 <p class="section-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam tempora accusamus hic architecto ipsam repellat <a href="mailto:demo@mail.xyz">demo@mail.xyz</a> nihil quidem maiores veniam doloremque labore, laboriosam, dolorum eligendi harum. Quidem perferendis quia ad?</p>
@@ -72,13 +59,19 @@
     </main>
 
     <footer class="bg-primary container">
-        <div class="row">
-            SOCIALS
-        </div>
+        <div class="row socials"></div>
         <div class="small-row">
-            logo + bottom texts
+            <img src="./img/footerlogo.png" alt="Logo" class="footer-logo">
+            <div class="footer-trio">
+                <div class="item">Copyright &copy; 2021 <a href="#">Matrox</a></div>
+                <div class="item">All rights reserved</div>
+                <div class="item">Designed by <a href="#" target="_blank">TrendyTheme</a></div>
+            </div>
+            <p class="footer-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque vero eveniet eum delectus a ipsam <a href="#">200+</a> minima quia quis quos pariatur, fuga rerum ipsum harum? Placeat <a href="#">Matrox</a> esse error blanditiis.</p>
         </div>
     </footer>
+
+    <script src="./js/main.js" type="module" defer></script>
 </body>
 
 </html>
