--- a/7-coming-soon/index.html
+++ b/7-coming-soon/index.html
@@ -36,9 +36,7 @@
             <form class="form">
                 SUBSCRIBE FORM
             </form>
-            <div class="mouse">
-                MOUSE
-            </div>
+            <div class="mouse"></div>
         </div>
     </div>
 
@@ -59,9 +57,11 @@
     </main>
 
     <footer class="bg-primary container">
-        <div class="row socials"></div>
+        <div class="row socials">
+            <a href="#" class="back-to-top fa fa-angle-up"></a>
+        </div>
         <div class="small-row">
-            <img src="./img/footerlogo.png" alt="Logo" class="footer-logo">
+            <img src="./img/footer-logo.png" alt="Logo" class="footer-logo">
             <div class="footer-trio">
                 <div class="item">Copyright &copy; 2021 <a href="#">Matrox</a></div>
                 <div class="item">All rights reserved</div>
